; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/arm/plat-pxa/extr_mfp.c___mfp_config_run.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/arm/plat-pxa/extr_mfp.c___mfp_config_run.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mfp_pin = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mfp_pin*)* @__mfp_config_run to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @__mfp_config_run(%struct.mfp_pin* %0) #0 {
  %2 = alloca %struct.mfp_pin*, align 8
  store %struct.mfp_pin* %0, %struct.mfp_pin** %2, align 8
  %3 = load %struct.mfp_pin*, %struct.mfp_pin** %2, align 8
  %4 = call i64 @mfp_configured(%struct.mfp_pin* %3)
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %14

6:                                                ; preds = %1
  %7 = load %struct.mfp_pin*, %struct.mfp_pin** %2, align 8
  %8 = getelementptr inbounds %struct.mfp_pin, %struct.mfp_pin* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 4
  %10 = load %struct.mfp_pin*, %struct.mfp_pin** %2, align 8
  %11 = getelementptr inbounds %struct.mfp_pin, %struct.mfp_pin* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @mfpr_writel(i32 %9, i32 %12)
  br label %14

14:                                               ; preds = %6, %1
  ret void
}

declare dso_local i64 @mfp_configured(%struct.mfp_pin*) #1

declare dso_local i32 @mfpr_writel(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
